[package]
name = "public-private-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.2.3" }
cosmwasm-schema = { version = "1.1.9" }
cosmwasm-storage = "1.2.4"
cw-storage-plus = "1.0.1"
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
cw2 = "1.0.1"
